# webelight-fastapi-docker

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: hashing.py  main.py  models.py  schemas.py
