[tool.poetry]
name = "fastapi-docker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "fastapi_docker"}]

[tool.poetry.dependencies]
python = "3.7.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
